--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,336 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 146.59.71.221
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id002
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 146.59.110.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 146.59.111.185
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 146.59.110.239
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ssr
+    server: 120.232.177.250
+    port: 1082
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 40575:fV3Nxq
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ssr
+    server: yd-05.paofunlink.com
+    port: 1080
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: fb7bc7521.microsoft.com
+    protocol-param: 7521:12HsOu
+  - &id007
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 35.176.9.232
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 146.59.111.197
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 141.95.126.108
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 146.59.71.220
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 146.59.110.169
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 146.59.111.186
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 162.19.204.80
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 146.59.110.240
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 162.19.204.83
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 141.95.126.100
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ssr
+    server: 120.232.177.250
+    port: 1081
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 7521:12HsOu
+  - &id018
+    name: 🇺🇸_US_美国
+    type: vmess
+    server: emwq-156-t.privetpack.site
+    port: 30020
+    cipher: auto
+    uuid: 7c288435-9d00-48e4-b9c9-46c2c23c321c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 4a2u0a04.mcfront.xyz
+    port: 31501
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us04.lovemc.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: 4a2u0a05.mcfront.xyz
+    port: 31506
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.lovemc.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: vmess
+    server: 4a2u0a06.mcfront.xyz
+    port: 31511
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us06.lovemc.xyz
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 7c1a1r04.mcfront.xyz
+    port: 31861
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.lovemc.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 3c2h4u04.mcfront.xyz
+    port: 31864
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.lovemc.xyz
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: vmess
+    server: 4w7u4a04.mcfront.xyz
+    port: 31871
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.lovemc.xyz
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: vmess
+    server: 7c6i2r04.mcfront.xyz
+    port: 31877
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br04.lovemc.xyz
+    network: tcp
+  - &id026
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 6q3i1n04.mcfront.xyz
+    port: 31831
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: in04.lovemc.xyz
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.lovemc.xyz
+    network: tcp
+  - &id028
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 3a4u0k04.mcfront.xyz
+    port: 31811
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.lovemc.xyz
+    network: tcp
+  - &id029
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: 9t1d5e04.mcfront.xyz
+    port: 31841
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.lovemc.xyz
+    network: tcp
+  - &id030
+    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
+    type: vmess
+    server: 4c3p1t01.mcfront.xyz
+    port: 31881
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: pt04.lovemc.xyz
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 3d1c4a04.mcfront.xyz
+    port: 31701
+    cipher: auto
+    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.lovemc.xyz
+    network: tcp
+  - &id032
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: cf1.trojan.tel
+    port: 8880
+    cipher: auto
+    uuid: c78452f0-8489-43d8-87c6-68e55e3ce245
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub-cf-v4.trojan.tel
+  - &id033
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: mrb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mrb2.shabijichang.com
+  - &id034
     name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
     server: sbl4.shabijichang.com
@@ -20,294 +350,6 @@ proxies:
       path: /
       headers:
         host: sbl4.shabijichang.com
-  - &id002
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 162.19.59.165
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 162.19.59.162
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 162.19.204.83
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 37.59.21.132
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 162.19.204.81
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 5.35.34.107
-    port: 55990
-    password: tOwOyvlXiY5ATJAUOpXNPN
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 57.129.1.20
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 51.158.200.160
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 146.59.110.240
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇫🇷_FR_法国_9
-    type: ss
-    server: 51.159.222.35
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_10
-    type: ss
-    server: 51.158.202.187
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_11
-    type: ss
-    server: 51.158.203.4
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_12
-    type: ss
-    server: 51.158.204.70
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_13
-    type: ss
-    server: 57.129.1.21
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_14
-    type: ss
-    server: 51.158.200.49
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇫🇷_FR_法国_15
-    type: ss
-    server: 146.59.110.168
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id018
-    name: 🇫🇷_FR_法国_16
-    type: ss
-    server: 51.158.200.45
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇫🇷_FR_法国_17
-    type: ss
-    server: 51.158.200.50
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id020
-    name: 🇫🇷_FR_法国_18
-    type: ss
-    server: 51.158.202.188
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id021
-    name: 🇫🇷_FR_法国_19
-    type: ss
-    server: 141.95.126.100
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id022
-    name: 🇫🇷_FR_法国_20
-    type: ss
-    server: 51.158.203.2
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇫🇷_FR_法国_21
-    type: ss
-    server: 51.158.200.161
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 5.78.70.196
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id025
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: poshtibani.chixixchi.com
-    port: 53298
-    cipher: auto
-    uuid: 166bdbd6-098f-4372-fec4-686e8c8d1ce8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id026
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 5.161.87.31
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id027
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 5.161.106.178
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id028
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 5.161.86.165
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id029
-    name: 🇧🇷_BR_巴西
-    type: vmess
-    server: 186.233.119.107
-    port: 41815
-    cipher: auto
-    uuid: f49a5dfc-2644-4b4e-e1f0-f2aa31e52dcb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id030
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 18.169.150.213
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 14.vmessprotocol.telegram-vmessprotocol-channel.space
-    port: 2086
-    cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
-      headers:
-        host: ca6.tehme100.fun
-  - &id032
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id033
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id034
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 80.92.205.112
-    port: 443
-    cipher: auto
-    uuid: 4c90ba75-230b-4f8b-bbff-8efa0eb0415f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
 proxy-groups:
   - name: PROXY
     type: select
