--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,320 +8,265 @@ proxies:
   - &id001
     name: 🇫🇷_FR_法国_1
     type: ss
-    server: 146.59.71.221
+    server: 57.129.1.20
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id002
     name: 🇫🇷_FR_法国_2
     type: ss
-    server: 146.59.110.168
+    server: 51.158.203.2
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
   - &id003
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 146.59.111.185
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 146.59.110.239
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ssr
-    server: 120.232.177.250
-    port: 1082
-    password: bxsnucrgk6hfish
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 40575:fV3Nxq
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: yd-05.paofunlink.com
-    port: 1080
-    password: bxsnucrgk6hfish
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: fb7bc7521.microsoft.com
-    protocol-param: 7521:12HsOu
-  - &id007
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 35.176.9.232
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 146.59.111.197
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 141.95.126.108
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 146.59.71.220
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 146.59.110.169
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_9
-    type: ss
-    server: 146.59.111.186
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇫🇷_FR_法国_10
-    type: ss
-    server: 162.19.204.80
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇫🇷_FR_法国_11
-    type: ss
-    server: 146.59.110.240
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇫🇷_FR_法国_12
-    type: ss
-    server: 162.19.204.83
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇫🇷_FR_法国_13
-    type: ss
-    server: 141.95.126.100
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ssr
-    server: 120.232.177.250
-    port: 1081
-    password: bxsnucrgk6hfish
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 7521:12HsOu
-  - &id018
-    name: 🇺🇸_US_美国
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: emwq-156-t.privetpack.site
-    port: 30020
+    server: mm3.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 7c288435-9d00-48e4-b9c9-46c2c23c321c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 4a2u0a04.mcfront.xyz
-    port: 31501
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.lovemc.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 4a2u0a05.mcfront.xyz
-    port: 31506
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.lovemc.xyz
-    network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: vmess
-    server: 4a2u0a06.mcfront.xyz
-    port: 31511
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.lovemc.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 7c1a1r04.mcfront.xyz
-    port: 31861
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.lovemc.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 3c2h4u04.mcfront.xyz
-    port: 31864
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.lovemc.xyz
-    network: tcp
-  - &id024
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 4w7u4a04.mcfront.xyz
-    port: 31871
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.lovemc.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 7c6i2r04.mcfront.xyz
-    port: 31877
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.lovemc.xyz
-    network: tcp
-  - &id026
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 6q3i1n04.mcfront.xyz
-    port: 31831
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.lovemc.xyz
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: 4o5a3u04.mcfront.xyz
-    port: 31821
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.lovemc.xyz
-    network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 3a4u0k04.mcfront.xyz
-    port: 31811
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.lovemc.xyz
-    network: tcp
-  - &id029
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 9t1d5e04.mcfront.xyz
-    port: 31841
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.lovemc.xyz
-    network: tcp
-  - &id030
-    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
-    type: vmess
-    server: 4c3p1t01.mcfront.xyz
-    port: 31881
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: pt04.lovemc.xyz
-    network: tcp
-  - &id031
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 3d1c4a04.mcfront.xyz
-    port: 31701
-    cipher: auto
-    uuid: 89e249d2-d316-49fe-b22e-2d1361361253
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.lovemc.xyz
-    network: tcp
-  - &id032
-    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
-    type: vmess
-    server: cf1.trojan.tel
-    port: 8880
-    cipher: auto
-    uuid: c78452f0-8489-43d8-87c6-68e55e3ce245
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub-cf-v4.trojan.tel
+        host: mm3.shabijichang.com
+  - &id004
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.158.203.4
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇦🇫_AF_阿富汗
+    type: ss
+    server: 121.127.46.147
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 5.161.68.48
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: family.mgtajhiz.ir
+    port: 2052
+    cipher: auto
+    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: family.mgtajhiz.ir
+  - &id008
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 51.158.200.160
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 51.158.204.70
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 146.59.110.169
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 51.158.200.50
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇫🇷_FR_法国_8
+    type: ss
+    server: 51.158.54.237
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇫🇷_FR_法国_9
+    type: ss
+    server: 51.158.200.49
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇫🇷_FR_法国_10
+    type: ss
+    server: 57.129.1.21
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇫🇷_FR_法国_11
+    type: ss
+    server: 51.158.200.166
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇫🇷_FR_法国_12
+    type: ss
+    server: 51.158.200.119
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id017
+    name: 🇫🇷_FR_法国_13
+    type: ss
+    server: 51.158.200.149
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇫🇷_FR_法国_14
+    type: ss
+    server: 51.158.202.172
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇫🇷_FR_法国_15
+    type: ss
+    server: 51.158.200.161
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id020
+    name: 🇫🇷_FR_法国_16
+    type: ss
+    server: 51.158.202.187
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id021
+    name: 🇫🇷_FR_法国_17
+    type: ss
+    server: 51.158.202.188
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 5.161.86.165
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id023
+    name: 🇷🇴_RO_罗马尼亚->🇺🇦_UA_乌克兰
+    type: vmess
+    server: ss.wwww.htttbbx.alirezashhamraz.tk
+    port: 18785
+    cipher: auto
+    uuid: 4388d6ff-ef7e-4263-a91f-6db05bdc3d22
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id024
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id025
+    name: 🇫🇷_FR_法国_18
+    type: ss
+    server: 146.59.71.220
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id026
+    name: 🇫🇷_FR_法国_19
+    type: ss
+    server: 146.59.111.197
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id027
+    name: 🇫🇷_FR_法国_20
+    type: ss
+    server: 146.59.71.221
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id028
+    name: 🇫🇷_FR_法国_21
+    type: ss
+    server: 162.19.204.75
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇫🇷_FR_法国_22
+    type: ss
+    server: 141.95.98.94
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id030
+    name: 🇫🇷_FR_法国_23
+    type: ss
+    server: 146.59.110.240
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id031
+    name: 🇫🇷_FR_法国_24
+    type: ss
+    server: 146.59.111.185
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id032
+    name: 🇫🇷_FR_法国_25
+    type: ss
+    server: 141.95.126.100
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
   - &id033
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: mrb2.shabijichang.com
     port: 80
@@ -336,9 +281,9 @@ proxies:
       headers:
         host: mrb2.shabijichang.com
   - &id034
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: sbl4.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -349,7 +294,37 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl4.shabijichang.com
+        host: mm2.shabijichang.com
+  - &id035
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id036
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: ml2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ml2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -410,6 +385,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -449,6 +426,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -486,6 +465,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
